Update JSqlParser version.