@@ -112,7 +112,7 @@
     <dependency>
       <groupId>com.github.jsqlparser</groupId>
       <artifactId>jsqlparser</artifactId>
-      <version>4.8</version>
+      <version>4.9</version>
     </dependency>
   </dependencies>
 
@@ -200,11 +200,6 @@
           <configuration>
             <source>17</source>
             <target>17</target>
-            <compilerArgs>
-              <!-- Needed because JSQLParser doesn't declare a module. -->
-              <arg>--add-reads</arg>
-              <arg>org.cojen.tupl=ALL-UNNAMED</arg>
-            </compilerArgs>
           </configuration>
       </plugin>
 
